import 'package:flutter/material.dart';

class ProfileCreatePostViewModel extends ChangeNotifier {
  ProfileCreatePostViewModel();

  // Future<void> onNewInfoButtonPressed(BuildContext context) async {
  //   Navigator.pushNamed(context, '/eventInfoCreate');
  // }

}