import 'package:flutter/material.dart';

class ProfileEditViewModel extends ChangeNotifier {
  ProfileEditViewModel();

// Future<void> onNewInfoButtonPressed(BuildContext context) async {
//   Navigator.pushNamed(context, '/eventInfoCreate');
// }

}